--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ SMTP_PASSWORD=TmKncxXwh1vsqUJCPd0A
 LOCAL_API_URL=http://localhost:5000
 GLOBAL_API_URL=https://itfindr-server-production.up.railway.app
 LOCAL_CLIENT_URL=http://localhost:3000
-GLOBAL_CLIENT_URL=https://itfindr.vercel.app/
+GLOBAL_CLIENT_URL=https://itfindr.vercel.app
